--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
         </a>
       </div>
 
+      <div class="project-tile">
+        <a href="https://github.com/gomperss/Website-Landing-Page/deployments/github-pages" target="_blank">
+          <p>Website Landing Page</p>
+        </a>
+      </div>
+
       <a
         id="profile-link"
         href="https://github.com/gomperss"
