--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
 
       <div class="project-tile">
-        <a href="https://github.com/gomperss/Website-Landing-Page/deployments/github-pages" target="_blank">
+        <a href="https://gomperss.github.io/Website-Landing-Page/" target="_blank">
           <p>Website Landing Page</p>
         </a>
       </div>
